--- a/index.html
+++ b/index.html
@@ -80,6 +80,14 @@
             flex-grow: 1; /* Take the remaining width */
             display: inline-block;
         }
+
+        #link-dashboard {
+            position: absolute;
+            height: 38px;
+            width: 100px;
+            right: 158px;
+            top: 88px;
+        }
     </style>
 </head>
 <body>
@@ -91,6 +99,7 @@
             <img src="tabs.png" style="width: 82px;">
         </div>
         <div id="content-container">
+            <a id="link-dashboard" href="https://www.figma.com/proto/LvROhBI1d6yEQclVK13tAE/Visibility360?node-id=8649-256077&node-type=canvas&t=W6Uzs6cjJAOQQmV2-0&scaling=contain&content-scaling=responsive&page-id=8649%3A244237&starting-point-node-id=8649%3A256077"></a>
             <img src="filters.png" style="width:100%; display: block; border-bottom: 2px solid #eaeaea;">
             <div id="chart"></div>
         </div>
