--- a/index.html
+++ b/index.html
@@ -18,6 +18,6 @@
 	</style>
 </head>
 <body>
-	<iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450" src="https://embed.figma.com/proto/LvROhBI1d6yEQclVK13tAE/Visibility360?node-id=8649-256077&node-type=canvas&scaling=contain&content-scaling=responsive&page-id=8649%3A244237&starting-point-node-id=8649%3A256077&embed-host=share" allowfullscreen></iframe>
+	<iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450" src="https://embed.figma.com/proto/LvROhBI1d6yEQclVK13tAE/Visibility360?node-id=8649-256077&node-type=canvas&scaling=contain&content-scaling=responsive&page-id=8649%3A244237&starting-point-node-id=8649%3A256077&embed-host=share"></iframe>
 </body>
 </html>
