--- a/details.html
+++ b/details.html
@@ -239,6 +239,14 @@
             display: inline-block;
         }
 
+        #link-dashboard {
+            position: absolute;
+            height: 60px;
+            width: 135px;
+            right: 180px;
+            top: 100px;
+        }
+
         /* Media Queries */
         @media (max-width: 768px) {
             .nav .container {
