--- a/graph.html
+++ b/graph.html
@@ -100,7 +100,7 @@
             <img src="tabs.png" style="width: 82px;">
         </div>
         <div id="content-container">
-            <a id="link-dashboard" href="https://kartik.github.io/"></a>
+            <a id="link-dashboard" href="index.html"></a>
             <img src="filters.png" style="width:100%; display: block; border-bottom: 2px solid #eaeaea;">
             <div id="chart"></div>
         </div>
