--- a/details.html
+++ b/details.html
@@ -247,6 +247,14 @@
             top: 100px;
         }
 
+        #link-graph {
+            position: absolute;
+            height: 60px;
+            width: 120px;
+            right: 60px;
+            top: 100px;
+        }
+
         /* Media Queries */
         @media (max-width: 768px) {
             .nav .container {
@@ -276,7 +284,8 @@
             <img src="tabs.png" style="width: 82px;">
         </div>
         <div id="content-container">
-            <a id="link-dashboard" href="https://kartik.github.io/"></a>
+            <a id="link-dashboard" href="index.html"></a>
+            <a id="link-graph" href="graph.html"></a>
             <img src="filters_dashboard_selected.png" style="width:100%; display: block; border-bottom: 2px solid #eaeaea;">
             <!-- Main Container -->
             <div class="container">
