--- a/details.html
+++ b/details.html
@@ -241,18 +241,26 @@
 
         #link-dashboard {
             position: absolute;
-            height: 60px;
-            width: 135px;
-            right: 180px;
-            top: 100px;
+            height: 90px;
+            width: 60px;
+            right: 184px;
+            top: 80px;
         }
 
         #link-graph {
             position: absolute;
-            height: 60px;
-            width: 120px;
-            right: 60px;
-            top: 100px;
+            height: 90px;
+            width: 60px;
+            right: 97px;
+            top: 80px;
+        }
+
+        #link-feed {
+            position: absolute;
+            height: 90px;
+            width: 60px;
+            right: 10px;
+            top: 80px;
         }
 
         /* Media Queries */
@@ -286,6 +294,7 @@
         <div id="content-container">
             <a id="link-dashboard" href="index.html"></a>
             <a id="link-graph" href="graph.html"></a>
+            <a id="link-feed" href="feed.html"></a>
             <img src="filters_dashboard_selected.png" style="width:100%; display: block; border-bottom: 2px solid #eaeaea;">
             <!-- Main Container -->
             <div class="container">
