--- a/graph.html
+++ b/graph.html
@@ -131,7 +131,7 @@
             <span class="legend-color" style="background:#9467bd;"></span> Activities
         </div>
         <div class="legend-item">
-            <span class="legend-color" style="background:#ff7f0e;"></span> Impact - Trending Up
+            <span class="legend-color" style="background:#ff7f0e;"></span> Impact - Warning
         </div>
         <div class="legend-item">
             <span class="legend-color" style="background:#d62728;"></span> Impact - Critical
